# vaapi-bypass

./: CMakeLists.txt  COPYING  README.md  connection.cfg
cmake/: compile_targets.cmake  hddlunite_include.cmake  libva_include.cmake  safestringlib_include.cmake  tracers_include.cmake  xlink_include.cmake
sample/: Include-hddl_bypass-shim-driver-in-GST-whitelist.patch
sample/invokeShim/: CMakeLists.txt  invokeShim.c
sample/kpi/: CMakeLists.txt  cropRoiPipelinePerf.c  gstPipelinePerf.c
sample/unite/: CMakeLists.txt  gstDecodeApp.c  gstEncodeApp.c
sample/unite/plugins/: CMakeLists.txt  gstbypass.c  gstbypass.h
src/common/: base_definition.h  gen_comm.c  gen_comm.h  hddl_va_shim_common.h  memory_manager.c  memory_manager.h  thread_manager.c  thread_manager.h
src/common/tcp/: tcp.h  tcp_placeholders.c
src/common/unite/: unite.c  unite.h
src/common/va/: va_display.c  va_display.h  va_display_drm.c
src/common/xlink/: xlink_pcie.c  xlink_pcie.h  xlink_placeholders.c  xlink_placeholders.h
src/ext/va_hantro_kmb/: va_hantro.h
src/host/: host_va_shim.c  host_va_shim.h
src/util/: debug_manager.h
